initial step (#10) (#11)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>