@@ -16,14 +16,14 @@
     <parent>
         <groupId>com.sun.xml.ws</groupId>
         <artifactId>project</artifactId>
-        <version>2.3.1-SNAPSHOT</version>
+        <version>2.3.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>servlet</artifactId>
-    <version>2.3.1-SNAPSHOT</version>
+    <version>2.3.2-SNAPSHOT</version>
 
     <name>JAX-WS RI Servlet Support (servlet)</name>
     <description>Servlet Support for JAX-WS RI</description>
@@ -35,8 +35,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -45,57 +45,14 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>unpack-asm</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>asm</groupId>
-                                    <artifactId>asm</artifactId>
-                                    <type>jar</type>
-                                    <classifier>sources</classifier>
-                                    <version>${asm.version}</version>
-                                </artifactItem>
-                            </artifactItems>
-                            <includes>org/objectweb/asm/*.java</includes>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <excludeArtifactIds>javax.activation</excludeArtifactIds>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>default-compile</id>
                         <configuration>
-                            <compilerArgs>
-                                <arg>--module-path</arg>
-                                <arg>${project.build.directory}/lib:${project.build.directory}/classes</arg>
-
-                                <!--TODO automatic module names based on jar filename -->
-                                <arg>--add-modules</arg>
-                                <arg>javax.servlet.api</arg>
-                                <arg>--add-reads</arg>
-                                <arg>com.sun.xml.ws.servlet=javax.servlet.api</arg>
-
-                            </compilerArgs>
+                            <includes>
+                                <include>module-info.java</include>
+                            </includes>
                         </configuration>
                     </execution>
                 </executions>
@@ -104,13 +61,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <additionalJOptions>
-                        <additionalJOption>--add-reads</additionalJOption>
-                        <!--reads for javax.servlet-api -->
-                        <additionalJOption>com.sun.xml.ws.servlet=ALL-UNNAMED</additionalJOption>
-                        <additionalparam>-Xdoclint:none</additionalparam>
-                    </additionalJOptions>
-                    <debug>true</debug>
+                    <doclint>none</doclint>
+                    <additionalOptions>--add-reads com.sun.xml.ws.servlet=ALL-UNNAMED</additionalOptions>
                 </configuration>
             </plugin>
         </plugins>
@@ -136,20 +88,20 @@
                                 <Import-Package>
                                     com.oracle.webservices.api.message;version=${jaxws-rt.version},
                                     com.sun.istack.localization;version=${jaxb-impl.version},
-                                    com.sun.xml.ws.api;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.api.ha;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.api.message;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.api.model.wsdl;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.api.server;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.resources;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.server;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.transport;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.transport.http;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.util.exception;version=${jaxws-rt.version}, 
-                                    com.sun.xml.ws.util.localization;version=${jaxws-rt.version}, 
-                                    javax.jws, 
+                                    com.sun.xml.ws.api;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.api.ha;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.api.message;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.api.model.wsdl;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.api.server;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.resources;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.server;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.transport;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.transport.http;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.util.exception;version=${jaxws-rt.version},
+                                    com.sun.xml.ws.util.localization;version=${jaxws-rt.version},
+                                    javax.jws,
                                     javax.servlet;version=${servlet-api.version},
-                                    javax.servlet.annotation;version=${servlet-api.version}, 
+                                    javax.servlet.annotation;version=${servlet-api.version},
                                     javax.servlet.http;version=${servlet-api.version},
                                     javax.xml.namespace,
                                     javax.xml.ws;version=${jaxws-api.osgiVersion},
